# advent-of-code-2024-solutions

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
src/: 01.py  02.py  03.py  04.py  05.py  06.py
src/aoc/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  __init__.py
